# stm32_bootloader

./: .gitignore  CMakeLists.txt  QtBootloader.spec  Readme.md  gcc.ld  main.cpp
Bootloader/: bootloader.cpp  bootloader.h  command.h  loader.cpp  loader.h  memorysection.h
CMSIS/Include/: cmsis_gcc.h
Hw/: addr.h  defs.h  factory.cpp  factory.h  gpio.h  imemory.h  interrupt.cpp  interrupt.h  rcc.h  reg_access.h  scb.h  systemtimer.h  systick.h  uart.h
Hw/Device/: flash.h  ram.h
host/: QtBootloader.py  QtBootloader.spec  bootloader.py  build.sh  checksum.py  elfHandler.py  portManagement.py
host/res/: mainwindow.ui
startup/: startup.cpp
